Make particles behind panels + years and solutions + fix this on different media

--- a/css/main.css
+++ b/css/main.css
@@ -396,7 +396,6 @@ html.lenis {
 .bg-particles {
   position: absolute;
   width: 100%;
-  height: 1000vh;
   top: 100vh;
   left: 0;
   z-index: 1000;
